tests/typescript/neg/lists/list-07.js
/*@ foo :: () => list [{v:number| 10 < v}] */
function foo(){
  return { data: 10, next: null };
}

